@@ -999,6 +999,7 @@ LATEXFILTER_FILTER_NAME=LaTeX
 POFILTER_FILTER_NAME=PO
 POFILTER_OPTIONS_TITLE=PO Filter Options
 POFILTER_ALLOW_BLANK=&Allow blank translations in the target files
+POFILTER_ALLOW_BLANK_SEGMENT=Allow translating &blank source segments
 POFILTER_SKIP_HEADER=&Skip PO header
 POFILTER_AUTO_FILL_IN_PLURAL_STATEMENT=Auto replace 'nplurals=INTEGER; &plural=EXPRESSION;' in header
 POFILTER_FORMAT_LABEL=Format:
