@@ -945,6 +945,7 @@ LATEXFILTER_FILTER_NAME=LaTeX
 POFILTER_FILTER_NAME=PO
 POFILTER_OPTIONS_TITLE=Options du filtre PO
 POFILTER_ALLOW_BLANK=Autoriser les traductions &vides dans les fichiers cible
+POFILTER_ALLOW_BLANK_SEGMENT=Autoriser la traduction de segments source &vides
 POFILTER_SKIP_HEADER=&Ignorer l'en-t\u00eate des fichiers PO
 POFILTER_AUTO_FILL_IN_PLURAL_STATEMENT=&Remplacer automatiquement \u00ab\u00a0nplurals=INTEGER; plural=EXPRESSION;\u00a0\u00bb dans l'en-t\u00eate
 POFILTER_FORMAT_LABEL=Format :
